Update of readme

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This file was created by JetBrains WebStorm 6.0.1 for binding GitHub repository
+Create usage and credit reports for an ArcGSI.com organization
+
+Check it out live here: http://maps.esri.com/AGSJS_Demos/templates/PortalReporting/index.html
